2017-02-20  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Treat result values as floating
	point values instead of integers.

2017-02-20  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Add executable flags to be used
	when measuring executables.
	* script/measure-code-size.py: Likewise.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Also do a run at -Os for
	comparison purposes.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* lib/Driver.cpp (parseResults): Read in the newly formatted
	results csv file.

2017-02-10  Edward Jones  <ed.jones@embecosm.com>

	* script/measure-code-size.py: Update result file csv output to
	include more metadata about the compiled element

2017-02-09  Edward Jones  <ed.jones@embecosm.com>

	* script/combined-elimination.py: Added file.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* script/measure-code-size.py (get_executable_src_files): Always
	extract an absolute path for each source file in the executable.
	(measure_executable): Do not add modules and functions of size 0
	to the results.
	(main): Correct an inverted check for errors.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp (Database::addResults): Check that a result
	is for a valid CompilationID before adding it.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Add --cxx argument.
	* script/generate-builds.py: Likewise.
	* script/mageec.py: Likewise.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-builds.py: Fix typo causing -fmageec-gfortran to
	not be passed to the builder.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Util.h (getFullPath getBaseName): Added functions.
	* lib/Util.cpp: Likewise.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* script/feature-extract.py: Add --fort argument, rename --cflags
	argument to just --flags.